assets/css/style.css
/* google fonts used */
@import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');

* {
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
    box-sizing: border-box;
    text-align: center;
}

html {
    min-height: 100vh;
}

body {
    margin: 0;
    background: radial-gradient(#4DA8DA, #12232e);
}

h1 {
    font-family: 'Montserrat', sans-serif;
    font-size: 2.5rem;
    color: #12232E;
    text-transform: uppercase;
}

.container {
    width: 90%;
    max-width: 1200px;
    margin: 0 auto;
}

.container-nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.page-title {
    color: #DBFCFF;
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    font-size: 4em;
}

header {
    background-color: #DBFCFF;
    padding: 0.8em 0;
    box-shadow: 2px 2px 10px white;
}

header a {
    text-decoration: none;
}

/* styling the nav bar */
nav ul {
    list-style: none;
    padding: 0;
    display: flex;
}

nav li {
    margin-left: 3em;
    font-family: 'Montserrat', sans-serif;
    font-size: 1.5rem;
    cursor: pointer;
}

nav a {
    text-decoration: none;
    color: #12232E;
}

/* styling the gameboards */
.game-info-container {
    grid-column: 1 / -1;
    display: flex;
    justify-content: space-between;
    padding: 0 10px;
}

.game-info {
    color: black;
    font-family: 'Hind', sans-serif;
    font-size: 2em;
}

.game-container {
    margin: 5px 0 10px;
    display: grid;
    grid-template-columns: repeat(4, auto);
    grid-gap: 5px;
    justify-content: center;
    perspective: 1000px;
}

/* styling the cards */
.memory-card {
    position: relative;
    cursor: pointer;
    height: 75px;
    width: 75px;
    transform: scale(1);
    transform-style: preserve-3d;
    transition: transform .5s;
}

.memory-card:active {
    transform: scale(.97);
    transition: transform .2s;
}

.memory-card.flip {
    transform: rotateY(180deg);
}

.card-front,
.card-back {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    padding: 3px;
    background: #12232e;
    border-radius: 10px;
    border-width: .2px;
    overflow: hidden;
    transition: transform 500ms ease-in-out;
    backface-visibility: hidden;
}

.card-front {
    transform: rotateY(180deg);
}

/* styling the restart button */
.game-btn, .send-btn {
    display: inline-block;
    text-decoration: none;
    color: #DBFCFF;
    border: 1px solid #DBFCFF;
    padding: 12px 34px;
    font-size: 14px;
    background: #12232e;
    position: relative;
    cursor: pointer;
    border-radius: 10px;
    transition: 1s;
}

.game-btn:hover {
    border: 1px solid #12232e;
    background: #DBFCFF;
    color: #0d0d2f;
    text-decoration: none;
    transition: 1s;
}

/* styling the start game text */
.overlay-text {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    justify-content: center;
    align-items: center;
    z-index: 100;
    color: #DBFCFF;
    font-family: 'Hind', sans-serif;
}

.overlay-text.visible {
    display: flex;
    animation: overlay-grow 500ms forwards;
    cursor: pointer;
  }

@keyframes overlay-grow {
    from {
        background-color: rgba(0, 0, 0, 0);
        font-size: 0;
    }

    to {
        background-color: rgba(0, 0, 0, .8);
        font-size: 6em;
    }
}

/* styling the rules modal */
.rules {
    display: none;
    background-color: rgba(0, 0, 0, 0.8);
    position: fixed;
    z-index: 99;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
}

.rules-container {
    font-family: 'Hind', sans-serif;
    border: 0.8em solid #DBFCFF;
    background-color: #12232e;
    margin: 100px 500px 100px;
    border-radius: 20px;
    padding: 50px;
}

.rules-content {
    color: #DBFCFF;
}
.rules-list {
    font-weight: 300;
    margin-top: 1rem;
    padding-bottom: 1rem;
}

.rules-list li {
    font-family: 'Hind', sans-serif;
    margin-bottom: 25px;
    text-align: center;
}

/* Add style for contact page */
.form-container {
    background-color: #0d0d2f;
    border-radius: 0.15rem;
    box-shadow: 0 2px 6px 0 rgb(0 0 0 / 30%);
    height: 100%;
    margin: 5rem auto 0;
    max-width: 30rem;
    padding: 2.5rem 3rem;
    width: 100%;
    color: #DBFCFF;
  }
  
  .text-input {
    color: #0d0d2f;
    width: 100%;
    height: 30px;
    margin: 5px 0 20px;
    border: 1px solid #0d0d2f;
    border-radius: 2px;
    text-align: left;
}

/*Add style the Finish modal*/ 
.finish {
    display: none;
    background-color: rgba(0, 0, 0, 0.8);
    position: fixed;
    z-index: 99;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
}

.finish-content {
    font-family: 'Hind', sans-serif;
    background-color: #DBFCFF;
    margin: 100px 500px 100px;
    color: #12232e;
    border-radius: 20px;
    border: 0.8em solid #12232e;
    font-weight: 300;
}

/*Style the close button*/
.close {
    align-items: flex-end;
    color: #12232E;
    font-size: 3em;
  }

  .close:hover,
.close:focus {
  color: #12232E;
  text-decoration: none;
  cursor: pointer;
}

@media (max-width: 640px) {
   
.container-nav {
     flex-direction: column;
}

 nav ul {
    flex-direction: column;
}

nav li {
    margin: 0.8em 0;
}

.rules-container {  
    margin: 100px 50px 10px;
    padding: 10px;
}

.finish-content {  
    margin: 100px 50px 10px;
    padding: 10px;
}

.finish-content h2 {  
    font-size: medium;
}
  }

  @media (max-width: 999px) {
   
    .rules-container {  
        margin: 100px 50px 10px;
        padding: 10px;
    }

    .finish-content {  
        margin: 100px 50px 10px;
        padding: 10px;
    }
  }

  @media (max-width: 1400px) {
   
    .rules-container {  
        margin: 100px 50px 10px;
        padding: 10px;
    }

    .finish-content {  
        margin: 100px 50px 10px;
        padding: 10px;
    }
  }

